// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editor/> should call the correct callbacks when removing a button 1`] = `
[
  [
    "some.template.meta.custom.buttons",
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when removing a button 2`] = `
[
  [
    [
      {
        "action": {
          "body": {
            "application/json": {},
            "application/x-www-form-urlencoded": [],
            "contentType": "application/json",
          },
          "headers": [],
          "method": "GET",
          "params": [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when removing a button 3`] = `
[
  [
    "some.template.meta.custom.buttons",
    [
      "some",
      "absolute",
      "template",
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a edited button 1`] = `
[
  [
    "some.template.meta.custom.buttons",
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a edited button 2`] = `
[
  [
    [
      {
        "action": {
          "body": {
            "application/json": {},
            "application/x-www-form-urlencoded": [],
            "contentType": "application/json",
          },
          "headers": [],
          "method": "GET",
          "params": [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
      {
        "action": {
          "body": {
            "application/json": {},
            "application/x-www-form-urlencoded": [],
            "contentType": "application/json",
          },
          "headers": [],
          "method": "GET",
          "params": [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots too",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a new button 1`] = `[]`;

exports[`<Editor/> should call the correct callbacks when submitting a new button 2`] = `[]`;

exports[`<Editor/> should render with buttons and "add button" button 1`] = `
<div>
  <ul
    class="editList"
  >
    <li
      class="editRow"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          I am in snapshots
        </span>
      </button>
      <span
        class="customActionEditIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
    <li
      class="editRow"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          I am in snapshots too
        </span>
      </button>
      <span
        class="customActionEditIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
  </ul>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 addButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
    type="button"
  >
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
    >
      add
    </i>
    <span
      class="ui-button-content-cef1"
    >
      Add Button
    </span>
  </button>
</div>
`;
